--- a/app/design/frontend/base/default/template/stuntcoders/wprest/post.phtml
+++ b/app/design/frontend/base/default/template/stuntcoders/wprest/post.phtml
@@ -1,10 +1,11 @@
+<?php /* @var Stuntcoders_Wprest_Block_Post $this */ ?>
 <main class="site-main">
     <article class="single-post">
         <header class="entry-header">
-            <h1 class="entry-title"><?php echo $this->getPostTitle(); ?></h1>
+            <h1 class="entry-title"><?php echo $this->getTitle(); ?></h1>
         </header>
         <div class="entry-content">
-            <div class="cms-post-content"><?php echo $this->getPostContent(); ?></div>
+            <div class="post-content"><?php echo $this->getContent(); ?></div>
         </div>
     </article>
 </main>
