Update category template

--- a/app/design/frontend/base/default/template/stuntcoders/wprest/category.phtml
+++ b/app/design/frontend/base/default/template/stuntcoders/wprest/category.phtml
@@ -1,46 +1,15 @@
-<?php
-    $prev = $this->getPrevPageUrl();
-    $next = $this->getNextPageUrl();
-?>
+<?php /* @var Stuntcoders_Wprest_Block_Category $this */ ?>
 
 <div class="archive">
     <main class="site-main">
         <?php foreach ($this->getPosts() as $post): ?>
-            <article class="row post">
-                <div class="medium-4 medium-push-8 columns">
-                    <div class='hex-wrapper'>
-                        <?php if (!empty($post['featured_image'])): ?>
-                            <div class="feature-img" style="background-image:url('<?php echo $post['featured_image']['guid']; ?>');"></div>
-                        <?php endif; ?>
-                    </div>
-                </div>
-
-                <div class="medium-8 medium-pull-4 columns">
-                    <div class="entry-header">
-                        <h1 class="entry-title">
-                            <a href="<?php echo Mage::helper('stuntcoders_wprest/api')->getUrl($post['slug']); ?>">
-                                <?php echo $post['title']; ?>
-                            </a>
-                        </h1>
-                    </div>
-                    <div class="entry-summary">
-                        <p>
-                            <?php echo isset($post['excerpt']) ? $post['excerpt'] : ''; ?>
-                        </p>
-                        <p>
-                            <a href="<?php echo Mage::helper('stuntcoders_wprest/api')->getUrl($post['slug']); ?>" class="more-link">
-                                <?php echo $this->__('Read more'); ?>
-                            </a>
-                        </p>
-                    </div>
-                </div>
-            </article>
+            <?php echo $this->getLayout()->createBlock('stuntcoders_wprest/post')->setTemplate('stuntcoders/wprest/category/post.phtml')->setPost($post)->toHtml(); ?>
         <?php endforeach; ?>
 
-        <?php if (!empty($prev) || !empty($next)): ?>
+        <?php if (($prev = $this->getPrevPageUrl()) || ($next = $this->getNextPageUrl())): ?>
             <nav class="navigation paging-navigation medium-8 columns" role="navigation">
                 <div class="nav-links">
-                    <?php if (!empty($prev)): ?>
+                    <?php if ($prev): ?>
                         <div class="nav-previous button">
                             <a href="<?php echo $prev; ?>">
                                 <span class="meta-nav">&larr;</span>
@@ -48,7 +17,7 @@
                             </a>
                         </div>
                     <?php endif; ?>
-                    <?php if (!empty($next)): ?>
+                    <?php if ($next): ?>
                         <div class="nav-next button">
                             <a href="<?php echo $next; ?>">
                                 <?php echo $this->__('Older posts'); ?>
