Fix rendering post title on category page

--- a/app/design/frontend/base/default/template/stuntcoders/wprest/category/post.phtml
+++ b/app/design/frontend/base/default/template/stuntcoders/wprest/category/post.phtml
@@ -12,7 +12,7 @@
         <div class="entry-header">
             <h2 class="entry-title">
                 <a href="<?php echo $this->getPostUrl(); ?>">
-                    <?php echo $this->getPostTitle(); ?>
+                    <?php echo $this->getTitle(); ?>
                 </a>
             </h2>
         </div>
